# ecox

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENTS.md  alembic.ini  batch_sync_all.py  fetch_eastmoney.py  fetch_reports.py  fetch_stock_prices.py  get_data.py  get_one_stock.py  get_report.py  get_shares.py  help.ipynb  litellm_config.yaml  main.py  profit_sheet__map.json  pyproject.toml  start.sh  sync_prices.py  test_iotdb.py  update_prices.py
datas/: test01.csv
docs/: README.md  agent-usage.md  chart-tool-usage.md  data-quality-guide.md
docs/development/: IMPROVEMENTS.md
docs/guides/: START_GUIDE.md
docs/plans/: 2026-03-02-data-validator-design.md  2026-03-02-data-validator-implementation.md  2026-03-03-financial-report-download-design.md  2026-03-03-financial-report-implementation.md  2026-03-03-shares-download-test-design.md  2026-03-03-shares-download-test-implementation.md  2026-03-16-data-quality-implementation-plan.md  2026-03-16-data-quality-refactor-design.md  2026-03-16-unified-financial-model-design.md  2026-03-16-unified-financial-model-implementation.md  2026-03-17-chart-tool-design.md  2026-03-17-chart-tool-implementation.md  2026-03-17-ecox-ai-agent-design.md  2026-03-17-ecox-ai-agent-implementation-plan.md  2026-03-17-realtime-price-15min-implementation.md  2026-03-17-realtime-price-15min-scheduler-design.md  2026-03-17-realtime-price-15min-summary.md
ecox/: help.ipynb
scripts/: analyze_valuation.py  backtest.py  deploy_realtime_scheduler.sh  fetch_daily.py  fetch_realtime.py  fetch_valuation.py  init_agent_tables.py  migrate_db.py  migrate_stock_data.py  monitor_scheduler.sh  start_agent_server.py  start_litellm_proxy.py  verify_scheduler.py
src/ecox/: __init__.py  config.py  database.py  db.py  error_handling.py  exceptions.py  get_data.py  logging_config.py  utils.py
src/ecox/agent/: __init__.py  agent.py  conversation.py  server.py
src/ecox/calculators/: __init__.py  base.py  cash_flow.py  efficiency.py  growth.py  profitability.py  solvency.py  (+1 more)
tests/: test_chart_e2e.py  test_chart_tool.py  test_data.py  test_exceptions.py  test_get_data.py  test_logging_config.py  test_orm.py  test_realtime_scheduler.py  test_router_integration.py
tests/agent/: test_agent.py  test_conversation.py  test_integration.py  test_models.py  test_server.py
tests/calculators/: test_base.py  test_cash_flow.py  test_efficiency.py  test_growth.py  test_profitability.py  test_solvency.py  test_valuation.py
tests/data/: __init__.py  conftest.py  test_shares_download.py
tests/integration/: __init__.py  test_e2e_lazy_loading.py  test_realtime_fetch.py  test_validation_integration.py
tests/models/: test_base.py
tests/services/: test_financial_analysis_integration.py  test_financial_analysis_service.py  test_financial_report_service.py  test_lazy_loading_service.py
tests/utils/: test_error_handling.py
tests/validators/: __init__.py  test_composite_validator.py  test_model_validators.py  test_price_validator.py  test_report_validator.py  test_volume_validator.py
(+54 files in other folders)
