[project]
name = "ecox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.91",
    "apscheduler>=3.11.1",
    "fastmcp>=2.13.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas-market-calendars>=5.1.3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "pytz>=2025.2",
    "sounddevice>=0.5.3",
    "watchfiles>=1.1.1",
]


[[tool.uv.index]]
url  = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv]
python-install-mirror = "https://gh-proxy.com/https://github.com/astral-sh/python-build-standalone/releases/download"
