[project]
name = "ecox"
version = "0.1.0"
description = "A股数据采集和量化回测系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.91",
    "alembic>=1.18.4",
    "apache-iotdb>=2.0.5",
    "apscheduler>=3.11.1",
    "backtrader>=1.9.78.123",
    "duckdb>=1.4.4",
    "fastapi>=0.135.1",
    "fastmcp>=2.13.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaleido>=0.2.1",
    "litellm>=1.82.3",
    "matplotlib>=3.10.7",
    "mplfinance>=0.12.10b0",
    "notebook>=7.5.3",
    "pandas-market-calendars>=5.1.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.0.0",
    "pyttsx3>=2.99",
    "pytz>=2025.2",
    "sounddevice>=0.5.3",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.42.0",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.15.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url  = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv]
python-install-mirror = "https://gh-proxy.com/https://github.com/astral-sh/python-build-standalone/releases/download"

# ========== 代码格式化配置 ==========

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ecox/old
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# 启用的规则
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

# 排除的规则
ignore = [
    "E501",   # 行过长（由 black 处理）
    "B008",   # 函数调用不支持键解包
    "F405",   # 星号导入（用于 MCP 工具函数）
]

# 允许自动修复的规则
fixable = ["ALL"]

# 排除的文件
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "ecox/old",
]

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进风格
indent-style = "space"
# 保留魔术尾随逗号
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
]
